Fix: update API URL to point to the Render backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
-    axios.get('http://localhost:3001/api/message')
+    axios.get('https://devops-backend-veq9.onrender.com/api/message')
       .then(response => {
         document.getElementById('message').innerText = response.data.message;
       })
