--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <title>Frontend</title>
 </head>
 <body>
-  <h1>Frontend</h1>
+  <h1>Frontend from my App</h1>
   <div id="message"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
